force-app/main/default/objects/POR_Decision__c/POR_Decision__c.object-meta.xml
<CustomObject>
    <label>POR Decision</label>
    <nameField>
        <displayFormat>POR-{0000}</displayFormat>
        <label>POR No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POR Decisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>