force-app/main/default/objects/POR_Decision__c/fields/Date_POR_Change_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_POR_Change_Approved__c</fullName>
    <label>Date POR Change Approved</label>
    <type>Date</type>
</CustomField>