force-app/main/default/objects/POR_Decision__c/fields/Impact_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Impact_Assessment__c</fullName>
    <label>Impact Assessment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>