force-app/main/default/objects/POR_Decision__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All MCP Platforms</fullName>
            </value>
            <value>
                <fullName>MCP50</fullName>
            </value>
            <value>
                <fullName>MCP100</fullName>
            </value>
            <value>
                <fullName>MCP110</fullName>
            </value>
            <value>
                <fullName>MCP200</fullName>
            </value>
            <value>
                <fullName>TT210</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>