force-app/main/default/objects/POR_Decision__c/fields/POR_Commercial_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>POR_Commercial_Release_Date__c</fullName>
    <label>POR Commercial Release Date</label>
    <type>Date</type>
</CustomField>