force-app/main/default/objects/POR_Decision__c/fields/Reason_for_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Change__c</fullName>
    <inlineHelpText>POR decisions are recorded once a POR has been approved. This can be a decision to change the project Commercial Release Date, Budget or Scope.</inlineHelpText>
    <label>Reason for Change</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>